# ctrlg

./: .gitignore  Cargo.toml  Makefile  README.md  install.bash
.github/ISSUE_TEMPLATE/: bug-report.yaml  bug.yml  feature-request.yaml
.github/workflows/: build.yml  release.yml
src/: cli_about.txt  colors.rs  command_strs.rs  dir_item.rs  dirs.rs  finder.rs  git_meta.rs  keybind.rs  main.rs  settings.rs  version.rs
src/commands/: add.rs  ascii_logo.txt  check_updates.rs  ctrlgcommand.rs  ctrlkcommand.rs  find.rs  init.rs  keybinds.rs  mod.rs  update_instructions.txt
src/commands/shell/: ctrlg.bash  ctrlg.fish  ctrlg.zsh  ctrlk.fish
