[package]
name = "ctrlg"
description = "A command line context switcher, written in Rust"
version = "0.0.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.11.0", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
skim = "0.9.4"
dirs-next = "2.0.0"
shellexpand = "2.1.0"
glob = "0.3.0"
lazy_static = "1.4.0"
