[package]
name = "ctrlg"
description = "A command line context switcher, written in Rust"
version = "0.5.1"
edition = "2021"
license = "MIT"
documentation = "https://github.com/mrjones2014/ctrlg/blob/master/README.md"
homepage = "https://github.com/mrjones2014/ctrlg#readme"
repository = "https://github.com/mrjones2014/ctrlg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.13", features = ["vendored-libgit2"], default-features = false }
config = { version = "0.11.0", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.6", features = ["derive", "unicode", "wrap_help"] }
ansi_term = "0.12"
skim = "0.9.4"
dirs-next = "2.0.0"
shellexpand = "2.1.0"
glob = "0.3.0"
once_cell = "1.9.0"
copypasta = "0.7.1"
